<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:orientation="vertical"
    android:padding="@dimen/margin_default">

    <TextView
        style="@style/TextAppearance.GVILLEDA.Title.Datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/marginTop_default"
        android:layout_marginRight="16dp"
        android:text="@string/DevBy"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.GVILLEDA.Title"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="" />

    <TextView
        style="@style/TextAppearance.GVILLEDA.Title.Datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/Name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.GVILLEDA.Title"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/MyName"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.GVILLEDA.Title"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="" />

    <TextView
        style="@style/TextAppearance.GVILLEDA.Title.Datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/Code"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.GVILLEDA.Title"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/MyCode"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.GVILLEDA.Title"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/top_default"
        android:layout_marginRight="16dp"
        android:text="@string/tvVersion"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.GVILLEDA.Title"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/msgDerechosReservados"
        android:textAlignment="center"
        android:textColor="@color/white" />

</LinearLayout>