<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeleccionarPublicacionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_default">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txvTitulo"
            style="?attr/textAppearanceBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rgPublicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txvTitulo"
            app:layout_constraintVertical_bias="0.3">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbtLibro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/libro"
                android:textSize="@dimen/text_size_default" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbtRevista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/revista"
                android:textSize="@dimen/text_size_default" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/rgPublicacion"
            app:layout_constraintStart_toStartOf="@id/rgPublicacion"
            app:layout_constraintTop_toBottomOf="@id/rgPublicacion"
            app:layout_constraintVertical_bias="0.7" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>